--- a/Chinese_Traditional.lng
+++ b/Chinese_Traditional.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |繁體中文(臺灣)|
 |~LANGUAGEVERSION|
-|1.41 - 1|
+|1.42 - 1|
 |~LANGUAGEAUTHOR|
 |高祥元 (Kao Shiang-Yuan)|
 |~LANGUAGEAUTHOREMAIL|
@@ -1374,6 +1374,14 @@
 |您應該定期備份資料庫檔案(備份到獨立的資料儲存裝置)。|
 |Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.|
 |您的資料將儲存在KeePass資料庫檔案。在第一次儲存檔案時，KeePass將詢問存檔位置。|
+|- ChaCha20 algorithm|
+|- ChaCha20演算法|
+|Show warning when the key transformation settings are weak|
+|在資料庫的key transformation設定太過薄弱時提出警告|
+|The key transformation settings of the database are weak.|
+|這個資料庫的key transformation設定十分薄弱。|
+|Do you want to set them to the current default values (recommended)?|
+|您是否要將它們恢復為預設值？(建議)|
 |~LANGISO6391CODE|
 |zh|
 |About KeePass|
