--- a/Chinese_Simplified.lng
+++ b/Chinese_Simplified.lng
@@ -1,8 +1,8 @@
-﻿2023-2-28 01:41
+﻿2024-1-30 01:42
 |~LANGUAGENAME|
 |简体中文|
 |~LANGUAGEVERSION|
-|1.40|
+|1.42|
 |~LANGUAGEAUTHOR|
 |Leo Dou @ CCF|
 |~LANGUAGEAUTHOREMAIL|
@@ -325,6 +325,8 @@
 |- Arcfour crypto routine|
 |- Twofish algorithm|
 |- Twofish 算法|
+|- ChaCha20 algorithm|
+|- ChaCha20 算法|
 |The program will exit now.|
 |现在将退出程序。|
 |Self-Test(s) Failed|
@@ -1393,3 +1395,9 @@
 |记住数据库文件的保存位置非常重要。|
 |You should regularly create a backup of the database file (onto an independent data storage device).|
 |建议你定期创建数据库文件的备份（到独立的数据存储设备）。|
+|Show warning when the key transformation settings are weak|
+|密匙转换设置安全性差时显示警告|
+|The key transformation settings of the database are weak.|
+|数据库的密匙转换设置安全性差。|
+|Do you want to set them to the current default values (recommended)?|
+|你想设置为当前默认（推荐）值吗？|
