--- a/French.lng
+++ b/French.lng
@@ -1,7 +1,7 @@
 ﻿|~LANGUAGENAME|
 |Français|
 |~LANGUAGEVERSION|
-|1.41|
+|1.42|
 |~LANGUAGEAUTHOR|
 |Ronan Plantec|
 |~LANGUAGEAUTHOREMAIL|
@@ -83,19 +83,19 @@
 |Add Entry|
 |Ajouter une entrée|
 |Edit Entry|
-|Modifier l'entrée|
+|Éditer l'entrée|
 |Group name:|
 |Nom de groupe :|
 |Add Group|
 |Ajouter un groupe|
 |Edit Group|
-|Modifier un groupe|
+|Éditer un groupe|
 |Random mouse input|
 |Saisie aléatoire à la souris|
 |Click to begin:|
 |Cliquer pour démarrer :|
 |Use &Mouse as Random Source|
-|Utilisez la &souris comme source d'aléa|
+|Utiliser la &souris comme source d'aléas|
 |Move the mouse in the field above until this is full:|
 |Déplacer la souris jusqu'à son remplissage :|
 |Hint: It is best to use both mouse and keyboard random sources.|
@@ -169,7 +169,7 @@
 |Copy &Password|
 |Copier le mot de &passe|
 |Open &URL(s)|
-|Ouvrir l'/les adresse(s) (&URL-s-)|
+|Ouvrir l'/les adresse(s) (&URL[s])|
 |&Find in Database...|
 |Rechercher dans la &base de données...|
 |Find in t&his Group...|
@@ -219,7 +219,7 @@
 |Stop|
 |Arrêter|
 |Enter a group name!|
-|Saisissez un nom de groupe!|
+|Saisissez un nom de groupe !|
 |You must generate some random values using the random mouse input box or the edit field before you can close this dialog.|
 |Vous devez générer des valeurs aléatoires en utilisant un déplacement aléatoire de la souris ou la zone de saisie au clavier avant de fermer cette boîte de dialogue.|
 |No random input|
@@ -246,6 +246,8 @@
 |- Routine de chiffrement Arcfour|
 |- Twofish algorithm|
 |- Algorithme Twofish|
+|- ChaCha20 algorithm|
+|- Algorithme ChaCha20|
 |The program will exit now.|
 |Le programme va s'arrêter maintenant.|
 |Self-Test(s) Failed|
@@ -261,9 +263,9 @@
 |Failed to set the master key!|
 |La clé principale ne peut pas être définie !|
 |File cannot be opened!|
-|Le fichier ne peut être ouvert!|
+|Le fichier ne peut être ouvert !|
 |File cannot be saved!|
-|Le fichier ne peut être enregistré!|
+|Le fichier ne peut être enregistré !|
 |Save as Profile|
 |Enregistrer comme profil|
 |Do you want to save the changes before closing?|
@@ -305,7 +307,7 @@
 |Language file cannot be opened!|
 |Le fichier de langue ne peut être ouvert !|
 |Do you wish to restart KeePass now?|
-|Voulez-vous redémarrer KeePass maintenant ?|
+|Souhaitez-vous redémarrer KeePass maintenant ?|
 |Restart KeePass?|
 |Redémarrer KeePass ?|
 |Application cannot be restarted automatically!|
@@ -437,7 +439,7 @@
 |TAN Wizard|
 |Assistant NAT (TAN)|
 |Using this wizard you can easily add TAN entries.|
-|Avec cet assistant, vous pouvez facilement ajouter des entrées NAT (TAN).|
+|Avec cet assistant, vous pouvez facilement ajouter des entrées de NAT (TAN).|
 |<TAN>|
 |<NAT>|
 |&Print...|
@@ -447,7 +449,7 @@
 |About &Translation...|
 |À propos de la &traduction...|
 |Author|
-|Auteur |
+|Auteur|
 |&Rearrange|
 |&Réorganiser|
 |&Sort Group List|
@@ -505,7 +507,7 @@
 |Make sure a writable medium is inserted.|
 |Assurez-vous d'avoir inséré un support non protégé en écriture.|
 |Not enough free disk space!|
-|Espace libre insuffisant sur le disque!|
+|Espace libre insuffisant sur le disque !|
 |Disable unsafe (security-critical) operations like exports, etc.|
 |Désactiver les opérations non sûres (critiques pour la sécurité) telles que les exportations, etc.|
 |Unsafe operations are disabled.|
@@ -521,7 +523,7 @@
 |Show &Expired Entries|
 |Afficher les entrées &expirées|
 |Click on an entry to jump to it.|
-|Cliquez sur une entrée pour y accéder.|
+|Cliquer sur une entrée pour y accéder.|
 |Quality:|
 |Qualité :|
 |Database Settings|
@@ -553,7 +555,7 @@
 |The database file has been modified!|
 |Le fichier de la base de données a été modifié !|
 |Most probably someone has changed the file while you were editing it.|
-|Le plus probable est que quelqu'un a changé le fichier pendant que vous le modifiez.|
+|Le plus probable est que quelqu'un a changé le fichier pendant que vous l'éditiez.|
 |Do you want to overwrite it?|
 |Souhaitez-vous l'écraser ?|
 |Are you sure you want to delete all selected entries?|
@@ -611,7 +613,7 @@
 |Invalid parameter|
 |Paramètre invalide|
 |Invalid random source|
-|Source d'aléa invalide|
+|Source d'aléas invalide|
 |Invalid/corrupted file structure|
 |Structure de fichier invalide/corrompue|
 |Invalid/wrong key|
@@ -637,7 +639,7 @@
 |Backup|
 |Backup|
 |Click [Cancel] to abort changing the key.|
-|Cliquez sur [Annuler] pour annuler le changement de clé.|
+|Cliquer sur [Annuler] pour annuler le changement de clé.|
 |Failed to create backup of this entry!|
 |Impossible de créer une sauvegarde de cette entrée !|
 |Immediately after opening a database|
@@ -735,15 +737,15 @@
 |Create a new password group.|
 |Créer un nouveau groupe de mots de passe.|
 |Click [No] to set a new key for the exported file.|
-|Cliquez sur [Non] pour définir une nouvelle clé pour le fichier exporté.|
+|Cliquer sur [Non] pour définir une nouvelle clé pour le fichier exporté.|
 |Click [Yes] to use the same key as the currently opened database.|
-|Cliquez sur [Oui] pour utiliser la même clé que celle de la base de mots de passe actuellement ouverte.|
+|Cliquer sur [Oui] pour utiliser la même clé que celle de la base de mots de passe actuellement ouverte.|
 |Copy &URL to Clipboard|
 |Copier l'adresse (&URL) dans le presse-papiers|
 |Create new IDs|
-|Créer de nouveaux ID|
+|Créer des nouveaux ID|
 |If you select this option, KeePass will create new IDs for all groups and entries. Consequently no existing groups and entries of the currently opened database will be modified or overwritten.|
-|Si vous sélectionnez cette option, KeePass créera de nouveaux ID pour tous les groupes et entrées. Par conséquent, aucun groupe ni entrée de la base de mots de passe actuellement ouverte ne sera modifié ou écrasé.|
+|Si vous sélectionnez cette option, KeePass créera des nouveaux ID pour tous les groupes et entrées. Par conséquent, aucun groupe ni entrée de la base de mots de passe actuellement ouverte ne sera modifié ou écrasé.|
 |KeePass will compare the last-modified times of the groups/entries and replace the existing ones only if the ones to import are newer.|
 |KeePass comparera les dates de dernière modification des groupes/entrées et remplacera ceux existants uniquement si ceux à importer sont plus récents.|
 |KeePass will replace all existing groups and entries by the ones in the file to import, if they have the same ID.|
@@ -769,17 +771,17 @@
 |Paste your TANs into the edit box below. All characters that are not explicitly specified as TAN characters are treated as separators, and only substrings consisting of TAN characters are added as TAN entries.|
 |Collez simplement vos NAT (TANs) dans la fenêtre d'édition ci-dessous. Le formatage n'a pas réellement d'importance, tout caractère non NAT est ignoré et seules les sous-chaînes NAT sont ajoutées comme entrées NAT.|
 |The help file contains detailed information about the expected input format. Do you want to open the help file?|
-|Le fichier d'aide contient les informations détaillées à propos des formats d'entrée attendue. Souhaitez-vous ouvrir le fichier d'aide?|
+|Le fichier d'aide contient les informations détaillées à propos des formats d'entrée attendue. Souhaitez-vous ouvrir le fichier d'aide ?|
 |&Tools|
 |&Outils|
 |Auto-Type Entry Selection|
 |Sélection de l'entrée de saisie automatique|
 |Click [No] to open the file in normal writing mode.|
-|Cliquez sur [Non] pour ouvrir le fichier en mode lecture/écriture.|
+|Cliquer sur [Non] pour ouvrir le fichier en mode lecture/écriture.|
 |Click [Yes] to open the file in read-only mode.|
-|Cliquez sur [Oui] pour ouvrir le fichier en mode lecture seule.|
+|Cliquer sur [Oui] pour ouvrir le fichier en mode lecture seule.|
 |Click on an entry to auto-type it.|
-|Cliquez sur une entrée pour effectuer sa saisie automatique.|
+|Cliquer sur une entrée pour effectuer sa saisie automatique.|
 |Exit program instead of locking the workspace after the specified time|
 |Quitter le programme au lieu de verrouiller l'espace de travail après la durée spécifiée|
 |Multiple entries exist for the current window. Please select the entry to auto-type.|
@@ -797,7 +799,7 @@
 |TAN View &Options|
 |&Options d'affichage des NAT (TANs)|
 |The file you are trying to open is locked, i.e. someone else has currently opened the file and is editing it.|
-|Le fichier que vous tentez d'utiliser est verrouillé, ce qui signifie que quelqu'un a déjà ouvert ce fichier et le modifie.|
+|Le fichier que vous tentez d'utiliser est verrouillé, ce qui signifie que quelqu'un a déjà ouvert ce fichier et l'édite.|
 |Use &Simple List View for TAN-Only Groups|
 |Utilisez la vue liste &simple pour les groupes de NAT (TAN) uniquement|
 |'Keyfile' or 'preselect' option is already specified|
@@ -841,7 +843,7 @@
 |Application|
 |Application|
 |Do you grant the application access to your KeePass database?|
-|Permettez-vous à l'application d'accéder à votre base de données KeePass?|
+|Permettez-vous à l'application d'accéder à votre base de données KeePass ?|
 |Enable remote control (allow applications to communicate with KeePass)|
 |Activer le contrôle à distance (permet aux applications de communiquer avec KeePass)|
 |Fields to remember|
@@ -855,7 +857,7 @@
 |The following application requests access to your currently opened KeePass database:|
 |L'application suivante demande d'accéder à la base de données KeePass actuellement ouverte :|
 |The group you selected cannot store entries. Please select a different group.|
-|Le groupe sélectionné ne peut pas contenir d'entrées. Sélectionnez SVP un groupe différent.|
+|Le groupe sélectionné ne peut pas contenir d'entrée. Sélectionnez SVP un groupe différent.|
 |Unknown|
 |Inconnu|
 |Value|
@@ -865,7 +867,7 @@
 |Brackets ([, ], {, }, (, ), <, >)|
 |Parenthèses ([, ], {, }, (, ) <, >)|
 |Click [No] to reuse the selected key file for this database.|
-|Cliquez sur [Non] pour réutiliser le fichier clé sélectionné pour cette base de mots de passe.|
+|Cliquer sur [Non] pour réutiliser le fichier clé sélectionné pour cette base de mots de passe.|
 |&Use master password and key file|
 |&Utilisez un mot de passe maître et un fichier clé|
 |Upper-case (A, B, C, ...)|
@@ -891,7 +893,7 @@
 |(No key file selected)|
 |(Aucun fichier clé sélectionné)|
 |A key file already exists on this drive. Do you want to overwrite or reuse it?|
-|Un fichier clé est déjà présent sur ce disque. Souhaitez-vous l'écraser ou le réutiliser?|
+|Un fichier clé est déjà présent sur ce disque. Souhaitez-vous l'écraser ou le réutiliser ?|
 |All Files|
 |Tous les fichiers|
 |Generate using character set:|
@@ -917,7 +919,7 @@
 |Exclude look-alike characters|
 |Exclure les caractères similaires|
 |(Automatically generated passwords for new entries)|
-|(Mots de passe généré automatiquement pour les nouvelles entrées)|
+|(Mots de passe générés automatiquement pour les nouvelles entrées)|
 |Hide passwords behind asterisks (***).|
 |Cacher les mots de passe par des astérisques (***).|
 |Also include the following characters:|
@@ -1047,11 +1049,11 @@
 |The current database file has been modified|
 |Le fichier de la base de données actuelle a été modifié|
 |The estimated quality of the master password must be at least %u bits!|
-|La qualité estimée du mot de passe maître doit être d'au moins %u bits!|
+|La qualité estimée du mot de passe maître doit être d'au moins %u bits !|
 |The file will not be closed.|
 |Le fichier ne va pas être fermé.|
 |The master password must be at least %u characters long!|
-|Le mot de passe maître doit être d'au moins %u chiffres de long!|
+|Le mot de passe maître doit être d'au moins %u chiffres de long !|
 |The selected key file already exists|
 |Le fichier de clé sélectionné existe déjà|
 |To specify the target window, either select an existing currently-opened window from the drop-down list, or enter the window title manually:|
@@ -1065,7 +1067,7 @@
 |URL Field: Select Document...|
 |Champ Adresse (URL) : choisir le document...|
 |Default auto-type sequence for standard entries:|
-|Séquence de saisie automatique par défaut pour les entrées standardes :|
+|Séquence de saisie automatique par défaut pour les entrées standards :|
 |Drop to background when copying data to the clipboard|
 |Basculer en arrière-plan lors de la copie de données dans le presse-papiers|
 |Enable auto-type features|
@@ -1093,9 +1095,9 @@
 |Prepend special initialization sequence for Internet Explorer windows|
 |Séquence spéciale d'initialisation préalable pour les fenêtres d'Internet Explorer|
 |Source field to reference|
-|Champs origine pour référence|
+|Champ origine pour référence|
 |The target file might be in a corrupted state. Please try saving again, and if that fails, save the database to a different location.|
-|Le fichier cible est peut être dans un état corrompu. Essayer de l'enregistrer encore une fois, et si cela ne fonctionne pas, enregistrer la base de données dans un répertoire différent.|
+|Le fichier cible est peut-être dans un état corrompu. Essayer de l'enregistrer encore une fois, et si cela ne fonctionne pas, enregistrer la base de données dans un répertoire différent.|
 |To avoid ambiguity, entries can be identified by their UUIDs, which are unique.|
 |Afin d'éviter les ambiguïtés, les entrées peuvent être identifiées par leur UUID, qui est unique.|
 |The selected field, which identifies the source entry, contains illegal characters (like '{', '}', newline characters, ...).|
@@ -1145,7 +1147,7 @@
 |%u updates are available!|
 |%u mises à jour sont disponibles !|
 |1 update is available!|
-|1 mise à jour est disponible|
+|1 mise à jour est disponible !|
 |Available|
 |Disponible|
 |Check For Updates|
@@ -1231,7 +1233,7 @@
 |Minimize main window after locking the workspace|
 |Réduire la fenêtre principale après le verrouillage de l'espace de travail|
 |Remember key sources (key file paths, provider names, ...)|
-|Se rappeler des sources de clé (chemins du fichier clé, noms fournis, etc.)|
+|Se souvenir des sources de clé (chemins du fichier clé, noms fournis, etc.)|
 |Ensure same keyboard layouts during auto-type|
 |Assurer la même configuration du clavier pendant la saisie automatique|
 |{PARAM} more entries|
@@ -1392,3 +1394,9 @@
 |Souhaitez-vous désactiver le tri automatique ?|
 |Entries currently cannot be rearranged, because automatic sorting is activated.|
 |Actuellement, les entrées ne peuvent pas être réarrangées, parce que le tri automatique est activé.|
+|Do you want to set them to the current default values (recommended)?|
+|Souhaitez-vous les positionner aux valeurs par défaut courantes (recommandé) ?|
+|Show warning when the key transformation settings are weak|
+|Affiche un avertissement quand les paramètres de transformation de clé sont faibles|
+|The key transformation settings of the database are weak.|
+|Les paramètres de transformation de clé de la base de données sont faibles.| 
