--- a/Serbian_Cyrillic.lng
+++ b/Serbian_Cyrillic.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |Српски|
 |~LANGUAGEVERSION|
-|1.40|
+|1.42|
 |~LANGUAGEAUTHOR|
 |Љуба Ћировић|
 |~LANGUAGEAUTHOREMAIL|
@@ -1252,8 +1252,6 @@
 |Сигурно желите да покушате да поправите датотеку базе података?|
 |Auto-&Sort Entry List|
 |Аутоматски сортирај листу ставки|
-|Auto-sorting of the entry list is enabled; you cannot move entries manually.|
-|Аутоматско сортирање листе ставки је омогућено; не можете ручно да премештате ставке.|
 |Auto-sorting of the entry list is enabled; you cannot sort the list manually now.|
 |Аутоматско сортирање листе ставки је омогућено; не можете ручно да сортирате листу.|
 |Automatic update checks are performed unintrusively in the background. A notification is only displayed when an update is available. Updates are not downloaded or installed automatically.|
@@ -1390,5 +1388,17 @@
 |Требало би редовно да правите резервну копију датотеке базе података (на неком независном уређају за складиштење података).|
 |Your data will be stored in a KeePass database file, which is a regular file. When saving for the first time, you will be prompted to specify the location where KeePass should save this file.|
 |Ваши подаци ће бити ускладиштени у KeePass-ову датотеку базе података, која је обична датотека. Када је први пут будете сачували, бићете упитани да наведете место где би KeePass требало да сачува ову датотеку.|
+|- ChaCha20 algorithm|
+|- Algoritam ChaCha20|
+|Do you want to deactivate automatic sorting?|
+|Да ли желите да деактивирате аутоматско сортирање?|
+|Do you want to set them to the current default values (recommended)?|
+|Да ли желите да их поставите на текуће подразумеване вредности (препоручено)?|
+|Entries currently cannot be rearranged, because automatic sorting is activated.|
+|Ставке не могу тренутно бити преуређене јер је активирано аутоматско сортирање.|
+|Show warning when the key transformation settings are weak|
+|Прикажи упозорење када су поставке трансформације кључа слабе|
+|The key transformation settings of the database are weak.|
+|Поставке трансформације кључа базе података су слабе.|
 |~LANGISO6391CODE|
 |sr|
