--- a/Finnish.lng
+++ b/Finnish.lng
@@ -2,8 +2,9 @@
 |~LANGUAGEAUTHOR||Kari Eveli|
 |~LANGUAGEAUTHOREMAIL||lexitec@lexitec.fi|
 |~LANGUAGENAME||suomi|
-|~LANGUAGEVERSION||1.40|
+|~LANGUAGEVERSION||1.42|
 |- Arcfour crypto routine||- Arcfour-salausrutiini|
+|- ChaCha20 algorithm||- ChaCha20-algoritmi|
 |- Rijndael decryption||- Rijndael-salauksenpurku|
 |- Rijndael encryption||- Rijndael-salauksenluonti|
 |- SHA 32-bit variables||- SHA 32 bitin muuttujat|
@@ -136,7 +137,6 @@
 |Automatically open last used database on startup||Avaa automaattisesti viimeksi käytetty tietokanta käynnistyksen yhteydessä|
 |Automatically resize table columns when resizing the main window||Suurenna/pienennä automaattisesti taulukkojen sarakkeita, kun pääikkunan kokoa muutetaan|
 |Automatically save when closing/locking the database||Automaattinen tallennus, kun tietokanta suljetaan/lukitaan|
-|Auto-sorting of the entry list is enabled; you cannot move entries manually.||Tietueluettelon automaattinen lajittelu on päällä: et voi siirtää tietueita käsin.|
 |Auto-sorting of the entry list is enabled; you cannot sort the list manually now.||Tietueluettelon automaattinen lajittelu on päällä: et voi lajitella tietueita käsin.|
 |Auto-Type Entry Selection||Automaattisyötön tietuevalinta|
 |Auto-Type: Customize Sequence||Automaattisyöttö: syöttöketjun räätälöinti|
@@ -232,10 +232,12 @@
 |Display images on buttons||Näytä kuvat painikkeissa|
 |Do not store data in the Windows clipboard history and the cloud clipboard||Älä varastoi tietoja Windowsin leikepöydän historiaan tai pilvileikepöytään|
 |Do you grant the application access to your KeePass database?||Annetaanko tälle sovellukselle pääsy omaan KeePass-tietokantaasi?|
+|Do you want to deactivate automatic sorting?||Haluatko ottaa automaattisen lajittelun pois päältä?|
 |Do you want to open the application directory (in order to move or delete language files)?||Haluatko avata sovellushakemiston (jotta voisit siirtää tai poistaa kielitiedostoja)?|
 |Do you want to overwrite it?||Haluatko korvata sen?|
 |Do you want to overwrite the current attachment?||Haluatko korvata liitteen?|
 |Do you want to save the changes before closing?||Haluatko tallentaa muutokset ennen sulkemista?|
+|Do you want to set them to the current default values (recommended)?||Asetetaanko ne nykyisiin oletusarvoihin (suositus)?|
 |Do you wish to restart KeePass now?||Käynnistetäänkö KeePass uudelleen heti?|
 |Drop to background when copying data to the clipboard||KeePass vetäytyy taustalle kopioitaessa tietoja leikepöydälle|
 |Dupli&cate Entry||M&onista tietue|
@@ -259,6 +261,7 @@
 |Enter Master Key||Syötä pääavain|
 |Enter Password:||Anna salasana:|
 |Enter the master key.||Pääavaimen syöttö.|
+|Entries currently cannot be rearranged, because automatic sorting is activated.||Tietueita ei nyt voi panna uuteen järjestykseen, koska automaattinen lajittelu on päällä.|
 |Entry List||Tietueluettelo|
 |Entry||Tietue|
 |Error code||Virhekoodi|
@@ -558,6 +561,7 @@
 |Show grid lines in the entry list||Näytä tietuelistaus raidoitettuna (joka toinen rivi)|
 |Show TAN &Indices in Entry Titles||Näytä avainlukulistojen &järjestysluvut tietueotsikoissa|
 |Show tray icon only if main window has been sent to tray||Näytä kuvake ilmaisinalueella, vain jos pääikkuna on pienennetty sinne|
+|Show warning when the key transformation settings are weak||Näytä varoitus, kun avaimenmuunnosasetukset ovat heikkoja|
 |Single left click instead of double-click for default tray icon action||Vasen napsautus hiirellä kaksoisnapsautuksen sijaan ilmaisinalueen kuvakkeen perustoiminossa|
 |So, the more the better. The different, the better.||Tavoite on suuri määrä mitä erilaisimpia merkkejä.|
 |Sort items in the auto-type entry selection dialog||Lajittele kohteet automaattisyöttötietueiden valintanäytössä|
@@ -608,6 +612,7 @@
 |The higher this number, the harder are dictionary attacks. But also the higher this number, the slower the database loading and saving.||Mitä suurempi tämä numero on, sitä vaikeampaa on suorittaa sanakirjahyökkäyksiä. Mutta, mitä suurempi tämä numero on, sitä hitaammin tietokanta latautuu ja tallentuu.|
 |The KeePass workspace will not be locked.||Keepassin työtilaa ei lukita.|
 |The key provider plugin did not supply a valid key||Avaintarjoajalisäosa ei tarjonnut kelvollista avainta|
+|The key transformation settings of the database are weak.||Tietokannan avaimenmuunnosasetukset ovat heikkoja.|
 |The local help file is a snapshot of the product documentation at the point when this product version was published. It is not updated automatically.||Paikallinen ohjetiedosto vastaa tuotteen dokumentaatiota tämän tuoteversion julkaisuhetkellä. Sitä ei päivitetä automaattisesti.|
 |The master key has been changed!||Pääavain on vaihdettu!|
 |The master password must be at least %u characters long!||Pääavain pitää olla vähintään %u merkkiä pitkä!|
